# WikipediaTools

./: .gitignore  README.MD
WikipediaGraph/: CMakeLists.txt
WikipediaGraph/src/: main.cpp
WikipediaGraph/src/data_structures/: graph.cpp  graph.h
WikipediaGraph/src/database/: DatabaseManager.cpp  DatabaseManager.h
WikipediaGraph/src/rendering/: render.cpp  render.h
WikipediaParser/: CMakeLists.txt
WikipediaParser/src/: main.cpp
WikipediaParser/src/parser/: consts.h
thesis/: thesis.md  ~$гистерская работа, MIA2302, Поиск,_основанный_на_метаданных, Павленко Антон.docx  Магистерская работа, MIA2302, Поиск,_основанный_на_метаданных, Павленко Антон.docx
